# bazel-demo-projects

./: .gitignore  README.md
beginning-bazel/: BUILD.bazel  README.md  WORKSPACE  baginning.bazelproject  deps.bzl  go.mod  go.sum
beginning-bazel/.ijwb/: .bazelproject
beginning-bazel/first-protobuf/: BUILD.bazel  transceiver.proto  transmission_object.proto
beginning-bazel/go-echo-server/: BUILD  BUILD.bazel  echo_server.go
beginning-bazel/go-grpc-server/: BUILD.bazel  main.go
beginning-bazel/go-protobuf/: BUILD.bazel  main.go
beginning-bazel/gz-demo-api/: BUILD.bazel  main.go
beginning-bazel/gz-gin-api/: BUILD.bazel
beginning-bazel/java-echo-client/: BUILD  BUILD.bazel
beginning-bazel/java-echo-client/src/main/java/com/raejz/echo/: EchoClient.java
beginning-bazel/java-grpc-client/: BUILD.bazel
beginning-bazel/java-grpc-client/src/main/java/com/raejz/grpc/: EchoClient.java
beginning-bazel/java-hello-world/: BUILD  BUILD.bazel
beginning-bazel/java-hello-world/src/main/java/com/raejz/greet/: HelloWorld.java
beginning-bazel/java-multiplier/: BUILD  BUILD.bazel
beginning-bazel/java-multiplier/src/main/java/com/raejz/multi/: IntMultiplier.java
beginning-bazel/java-multiplier/src/test/java/com/raejz/multi/: IntMultiplierTest.java
beginning-bazel/java-protobuf/: BUILD.bazel
beginning-bazel/java-protobuf/src/main/java/com/raejz/firstbuf/: EchoClient.java
beginning-bazel/maven-hello-world/: BUILD  BUILD.bazel  pom.xml
beginning-bazel/maven-hello-world/src/main/java/com/raejz/hello/: App.java
beginning-bazel/maven-hello-world/src/test/java/com/raejz/hello/: AppTest.java
beginning-bazel/sb-demo-api/: BUILD.bazel
beginning-bazel/sb-demo-api/src/main/java/com/raejz/: Application.java
beginning-bazel/sb-demo-api/src/main/java/com/raejz/api/: HelloController.java
