load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "transmission_object_proto",
    srcs = ["transmission_object.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "transceiver_proto",
    srcs = ["transceiver.proto"],
    visibility = ["//visibility:public"],
    deps = [":transmission_object_proto"],
)

java_proto_library(
    name = "transmission_object_java_proto",
    visibility = ["//visibility:public"],
    deps = [":transmission_object_proto"],
)

java_proto_library(
    name = "transceiver_java_proto",
    visibility = ["//visibility:public"],
    deps = [":transceiver_proto"],
)

load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

java_grpc_library(
    name = "transceiver_java_proto_grpc",
    srcs = ["transceiver_proto"],
    visibility = ["//visibility:public"],
    deps = [":transceiver_java_proto"],
)

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "transmission_object_go_proto",
    importpath = "gitlab.com/aionx/bazel-demo-projects/beginning-bazel/first-protobuf",
    proto = ":transmission_object_proto",
    visibility = ["//visibility:public"],
)

#go_proto_library(
#    name = "transceiver_go_proto",
#    compiler = "@io_bazel_rules_go//proto:go_grpc",
#    importpath = "gitlab.com/aionx/bazel-demo-projects/beginning-bazel/first-protobuf",
#    proto = ":transceiver_proto",
#    visibility = ["//visibility:public"],
#    deps = [":transmission_object_go_proto"],
#)

#load("@rules_proto_grpc_go//:defs.bzl", "go_grpc_library")
#go_proto_library(
#    name = "transceiver_go_proto",
#    importpath = "gitlab.com/aionx/bazel-demo-projects/beginning-bazel/first-protobuf",
#    deps = [":transmission_object_go_proto"],
#    visibility = ["//visibility:public"],
#)
