load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "go-echo-server",
    srcs = ["main.go"],
    importpath = "gitlab.com/aionx/bazel-demo-projects/beginning-bazel/go-protobuf",
    visibility = ["//visibility:public"],
    deps = [
        "//first-protobuf",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
