load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "go-echo-server",
    embed = [":go-protobuf_lib"],
    importpath = "gitlab.com/aionx/bazel-demo-projects/beginning-bazel/go-protobuf",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go-protobuf_lib",
    srcs = ["main.go"],
    importpath = "gitlab.com/aionx/bazel-demo-projects/beginning-bazel/go-protobuf",
    visibility = ["//visibility:public"],
    deps = [
        "//first-protobuf:transmission_object_go_proto",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
