load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gz-demo-api_lib",
    srcs = ["main.go"],
    importpath = "gitlab.com/aionx/bazel-demo-projects/beginning-bazel/gz-demo-api",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gorilla_mux//:mux"],
)

go_binary(
    name = "gz-demo-api",
    embed = [":gz-demo-api_lib"],
    visibility = ["//visibility:public"],
)
