load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gz-gin-api_lib",
    srcs = ["main.go"],
    importpath = "gitlab.com/aionx/bazel-demo-projects/beginning-bazel/gz-gin-api",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)

go_binary(
    name = "gz-gin-api",
    embed = [":gz-gin-api_lib"],
    visibility = ["//visibility:public"],
)
