java_binary(
    name = "java_echo_client",
    srcs = ["src/main/java/com/raejz/firstbuf/EchoClient.java"],
    main_class = "com.raejz.firstbuf.EchoClient",
    deps = ["//first-protobuf:transmission_object_java_proto",
            "@maven//:ch_qos_logback_logback_core",
            "@maven//:ch_qos_logback_logback_classic",
            "@maven//:org_slf4j_slf4j_api",],
)
