java_binary(
    name = "MavenHelloWorld",
    srcs = ["src/main/java/com/raejz/hello/App.java"],
    main_class = "com.raejz.hello.App",
    deps = ["@maven//:ch_qos_logback_logback_core",
            "@maven//:ch_qos_logback_logback_classic",
            "@maven//:org_slf4j_slf4j_api",
            ],
)

java_test(
    name = "MavenHelloWorldTest",
    srcs = ["src/test/java/com/raejz/hello/AppTest.java"],
    test_class = "com.raejz.hello.AppTest",
    deps = [],
)
